--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@
     margin: auto;
 }
 
+
+/*
+#jsalarmclock input.notification {
+    margin: auto;
+}*/
+
 body {
     background-color: lightblue;
 }
